--- a/package.json
+++ b/package.json
@@ -10,7 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@next-auth/mongodb-adapter": "^1.1.3",
+    "axios": "^1.7.7",
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "jspdf": "^2.5.2",
+    "mongodb": "^5.9.2",
+    "mongoose": "^8.7.1",
+    "next-auth": "^4.24.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0"
