setup backend for vercel deployment

--- a/Backend/.env.example
+++ b/Backend/.env.example
@@ -1,11 +1,4 @@
-# MongoDB Connection String
 DB_Url=
-
-# Port for your application
 PORT=
-
-# JWT Secret Key
 JWT_SECRET=
-
-
-
+NODE_ENV=development
