--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
+    "framer-motion": "^11.11.9",
     "jspdf": "^2.5.2",
     "mongodb": "^5.9.2",
     "mongoose": "^8.7.1",
