--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -23,6 +23,7 @@
     "react-datepicker": "^7.4.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-password-strength-bar": "^0.4.1",
     "react-router-dom": "^6.27.0",
     "styled-components": "^6.1.13"
   },
