--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -27,6 +27,8 @@
     "react-icons": "^5.3.0",
     "react-password-strength-bar": "^0.4.1",
     "react-router-dom": "^6.27.0",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.13"
   },
   "devDependencies": {
