--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
-    "herotofu-react": "^1.0.6"
+    "herotofu-react": "^1.0.6",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1"
   }
 }
